logs/klefki.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/asn1ate'...
Listing './lib/python3.5/site-packages/asn1ate/support'...
Listing './lib/python3.5/site-packages/asn1ate-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/base58-0.2.5.dist-info'...
Listing './lib/python3.5/site-packages/klefki'...
Listing './lib/python3.5/site-packages/klefki/asn'...
Listing './lib/python3.5/site-packages/klefki/bitcoin'...
Compiling './lib/python3.5/site-packages/klefki/bitcoin/private.py'...
***   File "./lib/python3.5/site-packages/klefki/bitcoin/private.py", line 33
    encode_privkey: Callable[[CF], str] = do(
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/klefki/bitcoin/sign.py'...
***   File "./lib/python3.5/site-packages/klefki/bitcoin/sign.py", line 49
    msgsig_encode: Callable[[ecdsa.SigType], bytes] = do(
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/klefki/client'...
Listing './lib/python3.5/site-packages/klefki/crypto'...
Listing './lib/python3.5/site-packages/klefki/ethereum'...
Listing './lib/python3.5/site-packages/klefki/types'...
Listing './lib/python3.5/site-packages/klefki/types/algebra'...
Listing './lib/python3.5/site-packages/klefki-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pysha3-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
